--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,6 @@ dependencies {
     compile files('libs/ShareSDK-Wechat-Moments-2.7.4.jar')
     compile files('libs/ShareSDK-Wechat-Core-2.7.4.jar')
     compile files('libs/ShareSDK-QZone-2.7.4.jar')
-    //    compile 'com.githang:status-bar-compat:0.3'
+    compile 'com.githang:status-bar-compat:0.3'
     compile files('libs/AMap_Location_V2.8.0_20160811.jar')
 }
