抢红包判断，bug处理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -152,5 +152,6 @@
                 <!--<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />-->
             <!--</intent-filter>-->
         <!--</receiver>-->
+        <!--<service android:name="services.TimerService"></service>-->
     </application>
 </manifest>
