--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
         <activity android:name="activity.HowToEarn.EarnFirstMoneyDetailActivity" />
         <activity android:name="activity.HowToEarn.ShiTuDetailActivity" />
         <activity android:name="activity.HowToEarn.JxzTzDetailActivity" />
+        <activity android:name="activity.KownPlatformActivity" />
         <activity android:name="activity.HowToEarn.ShopDetailActivity" />
         <activity android:name="activity.HowToEarn.RedDetailActivity" />
 
@@ -134,7 +135,7 @@
             android:windowSoftInputMode="stateHidden|adjustResize" >
 
             <intent-filter>
-                <data android:scheme="tencent100371282" />
+                <data android:scheme="tencent1105587215" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -147,11 +148,5 @@
         </activity>
         <!-- 高德地图定位 -->
         <service android:name="com.amap.api.location.APSService"></service>
-        <!--<receiver android:name="cn.broadcastreceiver.NetBroadcastReceiver" >-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
-        <!--<service android:name="services.TimerService"></service>-->
     </application>
 </manifest>
