--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:name="app.BaseApp"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <!--高德地图-->
         <meta-data android:name="com.amap.api.v2.apikey"
             android:value="32f471453b276b873eecb6cb7a0b0b47">
         </meta-data>
@@ -183,9 +184,9 @@
             android:exported="false"
             android:theme="@android:style/Theme.Light.NoTitleBar" />
         <!-- 点乐积分墙 -->
-        <activity android:name="com.dlnetwork.DevNativeActivity"
+        <activity android:name="com.yzhuanatm.DevNativeActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation"/>
-        <service android:name="com.dlnetwork.DevNativeService" />
+        <service android:name="com.yzhuanatm.DevNativeService" />
     </application>
 </manifest>
