--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,5 @@ dependencies {
     compile files('libs/libammsdk.jar')
     compile files('libs/dianru_sdk_v1.2.1.jar')
     compile files('libs/yzhuanatm.jar')
+    compile files('libs/dm_offerwall_4.2.0.jar')
 }
