--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:value="32f471453b276b873eecb6cb7a0b0b47">
         </meta-data>
         <activity
-            android:name="activity.MainActivity"
+            android:name="activity.YaoQingActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -75,6 +75,7 @@
         <activity android:name="activity.OpenBoxActivity" />
         <activity android:name="activity.ShowRedPriceActivity" android:theme="@style/loginDialog"/>
         <activity android:name="activity.JxzGetDetailActivity" />
+        <activity android:name="activity.MainActivity" />
         <activity android:name="activity.HelpCenterActivity" />
         <activity android:name="activity.HowToEarn.EarnFirstMoneyDetailActivity" />
         <activity android:name="activity.HowToEarn.ShiTuDetailActivity" />
@@ -82,7 +83,16 @@
         <activity android:name="activity.KownPlatformActivity" />
         <activity android:name="activity.HowToEarn.ShopDetailActivity" />
         <activity android:name="activity.HowToEarn.RedDetailActivity" />
+        <!-- 多盟配置 -->
         <service android:name="cn.dow.android.DService" />
+        <activity
+            android:name="cn.dow.android.DActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="aa.bb.cc.dd"/>
+            </intent-filter>
+        </activity>
         <!-- 点入积分墙配置 -->
         <meta-data
             android:name="DR_APPKEY"
@@ -91,9 +101,10 @@
         <meta-data
             android:name="com.dlnetwork.cid"
             android:value="default" />
+        <!-- 多盟 -->
         <meta-data
             android:name="D_PPID"
-            android:value="96ZJ2xZwzeDzPwTBK+" />
+            android:value="96ZJ0fxQzfhcfwTPVj" />
         <!-- 有米积分墙配置 -->
         <activity
             android:name="net.youmi.android.AdBrowser"
