--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:value="32f471453b276b873eecb6cb7a0b0b47">
         </meta-data>
         <activity
-            android:name="activity.YaoQingActivity"
+            android:name="activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -60,10 +60,11 @@
         <activity android:name="activity.Red.TakeRedActivity" />
         <activity android:name="activity.UnitTaskActivity" />
         <activity android:name="activity.FaskTaskActivity" />
-        <activity android:name="activity.OneShopActivity" />
+        <activity android:name="activity.YaoQingSharesActivity" />
         <activity android:name="activity.BindAliPayActivity" />
         <activity android:name="activity.IntoMoneyJqzActivity" />
         <activity android:name="activity.FaskTaskDetailActivity" />
+        <activity android:name="activity.CustomerShareActivity" />
         <activity android:name="activity.NewerTaskActivity" />
         <activity android:name="activity.Red.LookRedRecordActivity" />
         <activity android:name="activity.Red.RedTxDetailActivity" />
@@ -75,7 +76,7 @@
         <activity android:name="activity.OpenBoxActivity" />
         <activity android:name="activity.ShowRedPriceActivity" android:theme="@style/loginDialog"/>
         <activity android:name="activity.JxzGetDetailActivity" />
-        <activity android:name="activity.MainActivity" />
+        <activity android:name="activity.YaoQingActivity" />
         <activity android:name="activity.HelpCenterActivity" />
         <activity android:name="activity.HowToEarn.EarnFirstMoneyDetailActivity" />
         <activity android:name="activity.HowToEarn.ShiTuDetailActivity" />
