--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,14 @@ android {
             storePassword '888888'
         }
     }
-    compileSdkVersion 24
+    compileSdkVersion 23
     buildToolsVersion '23.0.1'
     defaultConfig {
         applicationId "com.chuanqi.yz"
         minSdkVersion 17
-        targetSdkVersion 24
-        versionCode 2
-        versionName '1.1'
+        targetSdkVersion 22
+        versionCode 3
+        versionName '1.2'
         signingConfig signingConfigs.config
     }
     buildTypes {
@@ -85,12 +85,13 @@ dependencies {
     compile files('libs/dianru_sdk_v1.2.1.jar')
     compile files('libs/yzhuanatm.jar')
     compile files('libs/dm_offerwall_4.2.0.jar')
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:design:24.0.0'
-    compile 'com.android.support:support-v4:24.0.0'
-    compile 'com.githang:status-bar-compat:0.3'
     compile files('libs/YoumiSdk_v6.1.0_2016-02-26.jar')
     compile files('libs/jg_filter_sdk_1.1.jar')
     compile files('libs/Xg_sdk_v2.46_20160602_1638.jar')
     compile files('libs/wup-1.0.0.E-SNAPSHOT.jar')
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.githang:status-bar-compat:0.3'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile files('libs/zixing-core-3.2.0.jar')
 }
